<resources>
    <string name="app_name">Spark01</string>
    <string name="sp">Never forget the essence of your spark! ..</string>
    <string name="todo">TODO</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="facebook_app_id">1689235294798297</string>
    <string name="fb_login_protocol_scheme">fb1689235294798297</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">yn0ftgnwKTWmtyb1kCJOZy1VN</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">7macNZgCY8xrp7KMQhvrwsr0DaJzqM31ws3upPIidIjInnrh2D</string>


</resources>