<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:transitionName="logoimg"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:text="@string/hello_there_welcome_back"
        android:transitionName="head"
        android:textSize="40sp" />
    <TextView
        android:id="@+id/stitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="t_t"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:hintTextColor="@color/black"
            android:transitionName="email_t"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            android:transitionName="psw_t"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="Forgot Passowrd?"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:transitionName="forgot_t"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>


        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_border"
            android:text="Login"
            android:transitionName="go_t" />
        <Button
            android:id="@+id/google_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Login with "
            android:layout_marginTop="5dp"
            android:transitionName="google_t"
            android:layout_marginBottom="5dp"
            android:background="@drawable/transparent_bg_bordered"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:drawableRight="@drawable/google"/>

        <Button
            android:id="@+id/fb_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Login with "
            android:layout_marginTop="5dp"
            android:transitionName="fb_t"
            android:layout_marginBottom="5dp"
            android:background="@drawable/transparent_bg_bordered"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:drawableRight="@drawable/facebook"/>



        <Button
            android:id="@+id/newuser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="New User? Sign Up"
            android:layout_gravity="center"
            android:elevation="0dp"
            android:transitionName="n_t"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>




    </LinearLayout>


</LinearLayout>
</androidx.core.widget.NestedScrollView>